# edcert

./: .gitignore  .travis.yml  Cargo.toml  README.md  search-index.js  sidebar-items.js
2016-02-29T22:41:08+00:00/: certificate.ec  private.key
2016-02-29T22:49:40+00:00/: certificate.ec  private.key
2016-02-29T22:50:46+00:00/: certificate.ec  private.key
certificate/: constant.SIGNATURE_LEN.html  index.html  sidebar-items.js
certificate_verificator/: index.html  struct.CertificateVerificator.html
ed25519/: constant.PRIVATE_KEY_LEN.html  fn.generate_keypair.html  fn.sign.html  fn.verify.html  sidebar-items.js
edcert/: .project  Cargo.toml  fn.copy_bytes.html  index.html  sidebar-items.js  test.txt
edcert/2016-02-23T19:57:58.210583665+00:00/: certificate.json  private.key
edcert/2016-02-23T20:36:26.748852057+00:00/: certificate.json  private.key
edcert/2016-02-23T20:37:49.404361057+00:00/: certificate.json  private.key
edcert/2016-02-27T22:57:58+00:00/: certificate.ec  private.key
edcert/2016-02-27T22:59:51+00:00/: certificate.ec  private.key
edcert/2016-02-27T23:00:46+00:00/: certificate.ec  private.key
edcert/2016-02-27T23:05:01+00:00/: certificate.ec  private.key
meta/: index.html
revoke-server/: api.php
signature/: index.html  struct.Signature.html
src/: bytescontainer.rs  certificate.rs  certificate_loader.rs  certificate_validator.rs  certificate_verificator.rs  certificateverificator.rs  ed25519.rs  fingerprint.rs  lib.rs  main.rs  meta.rs  revoker.rs  root_validator.rs  signature.rs  trust_validator.rs  validator.rs
(+178 files in other folders)
