[package]

name = "edcert"
version = "3.0.0"
authors = [ "Marvin Böcker <marvin.boecker@udo.edu>" ]

description = "a crate which can be used to sign and verify content based on ed25519."
repository = "https://github.com/zombiemuffin/edcert"
readme = "README.md"
keywords = ["ed25519", "crypto", "cryptography", "security", "edcert"]
license = "MIT"

[dependencies]
time = "^0.1"
chrono = "^0.2"
rustc-serialize = "^0.3"
sodiumoxide = "^0.0.9"
rust-lzma = "^0.2"
hyper = "^0.7"
