[package]
name = "edcert"
version = "9.0.1"
authors = [ "Marvin Böcker <marvin.boecker@udo.edu>" ]

description = "A crate which can be used to sign and verify content based on Ed25519."
repository = "https://github.com/zombiemuffin/edcert/"
documentation = "https://docs.rombie.de/edcert/"
readme = "README.md"
keywords = ["ed25519", "crypto", "cryptography", "security", "edcert"]
license = "MIT"

[dependencies]
secrets = "^0.11.1"
chrono = "^0.2"
rustc-serialize = "^0.3"
sodiumoxide = "^0.0.12"
